--- a/index.html
+++ b/index.html
@@ -1,10 +1,28 @@
 <!DOCTYPE html>
 <html lang="pt-br">
     <head>
-        <title>Tecladin: Um mini teclado musical</title>
+        <title>Tecladin: Um mini teclado musical, desconectado da tomada</title>
         <meta charset="utf-8">
     </head>
     <body>
-        
+
+        <div class="teclado">
+
+            <div class="oitavas">
+
+                <div class="oitava 1">
+                    <div class="tecla-branca"></div>
+                    <div class="tecla-branca"></div>
+                    <div class="tecla-branca"></div>
+                    <div class="tecla-branca"></div>
+                    <div class="tecla-branca"></div>
+                    <div class="tecla-branca"></div>
+                    <div class="tecla-branca"></div>
+                </div>
+
+            </div>  
+                     
+        </div>
+
     </body>
 </html>
