Teclas pretas da oitava criada.

--- a/index.html
+++ b/index.html
@@ -12,11 +12,16 @@
 
                 <div class="oitava 1">
                     <div class="tecla-branca"></div>
+                        <div class="tecla-preta do-sustenido"></div>
+                    <div class="tecla-branca"></div>
+                        <div class="tecla-preta re-sustenido"></div>
                     <div class="tecla-branca"></div>
                     <div class="tecla-branca"></div>
+                        <div class="tecla-preta mi-sustenido"></div>
                     <div class="tecla-branca"></div>
+                        <div class="tecla-preta fa-sustenido"></div>
                     <div class="tecla-branca"></div>
-                    <div class="tecla-branca"></div>
+                        <div class="tecla-preta sol-sustenido"></div>
                     <div class="tecla-branca"></div>
                 </div>
 
