--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
         <title>Tecladin: Um mini teclado musical, desconectado da tomada</title>
         <meta charset="utf-8">
+        <link rel="stylesheet" type="text/css" href="style.css"
     </head>
     <body>
 
@@ -25,7 +26,7 @@
                     <div class="tecla-branca"></div>
                 </div>
 
-            </div>  
+            </div>
                      
         </div>
 
