--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <title>Tecladin: Um mini teclado musical, desconectado da tomada</title>
         <meta charset="utf-8">
-        <link rel="stylesheet" type="text/css" href="style.css"
+        <link rel="stylesheet" type="text/css" href="style.css">
     </head>
     <body>
 
@@ -18,11 +18,11 @@
                         <div class="tecla-preta re-sustenido"></div>
                     <div class="tecla-branca"></div>
                     <div class="tecla-branca"></div>
-                        <div class="tecla-preta mi-sustenido"></div>
-                    <div class="tecla-branca"></div>
                         <div class="tecla-preta fa-sustenido"></div>
                     <div class="tecla-branca"></div>
                         <div class="tecla-preta sol-sustenido"></div>
+                    <div class="tecla-branca"></div>
+                        <div class="tecla-preta la-sustenido"></div>
                     <div class="tecla-branca"></div>
                 </div>
 
