Adicionei mais uma oitava e 3 teclas.

--- a/index.html
+++ b/index.html
@@ -26,9 +26,30 @@
                     <div class="tecla-branca"></div>
                 </div>
 
-            </div>
+                <div class="oitava 1">
+                    <div class="tecla-branca"></div>
+                        <div class="tecla-preta do-sustenido"></div>
+                    <div class="tecla-branca"></div>
+                        <div class="tecla-preta re-sustenido"></div>
+                    <div class="tecla-branca"></div>
+                    <div class="tecla-branca"></div>
+                        <div class="tecla-preta fa-sustenido"></div>
+                    <div class="tecla-branca"></div>
+                        <div class="tecla-preta sol-sustenido"></div>
+                    <div class="tecla-branca"></div>
+                        <div class="tecla-preta la-sustenido"></div>
+                    <div class="tecla-branca"></div>
+                </div>
+
+                <div class="oitava 1">
+                    <div class="tecla-branca"></div>
+                        <div class="tecla-preta do-sustenido"></div>
+                    <div class="tecla-branca"></div>
+                </div>
+
+            </div> <!-- div das oitavas-->
                      
-        </div>
+        </div> <!-- div do teclado-->
 
     </body>
 </html>
