Adicionei o painel do Teclado

--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
 
         <div class="teclado">
 
+            <div class="painel">
+                
+            </div>
+
             <div class="oitavas">
 
                 <div class="oitava 1">
