Área do botão power e botão criados.

--- a/index.html
+++ b/index.html
@@ -10,6 +10,15 @@
         <div class="teclado">
 
             <div class="painel">
+
+                <div class="area-do-botao">
+                    <span class="label-ligado-desligado">LIGAR / DESLIGAR</span>
+                    <div class="borda-do-botao">
+                        <div class="botao-power"></div>
+                    </div>
+                </div>
+
+                
                 
             </div>
 
