Botão e Logo Marca adicionados.

--- a/index.html
+++ b/index.html
@@ -18,7 +18,13 @@
                     </div>
                 </div>
 
-                
+                <div class="display">
+
+                </div>
+
+                <div class="logo-marca">
+                    WALps
+                </div>
                 
             </div>
 
